kubernetes/apps/network/traefik/app/ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zurg
spec:
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - zurg
